# djinni-library-template

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile-Cpp  Doxyfile-CppCli  Doxyfile-Java  Doxyfile-ObjC  README.md  build.py  conanfile.py  requirements.txt
build_tools/: get_version.py
cpp/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_my_1_1_djinni_library_1_1_example-members.html  class_my_1_1_djinni_library_1_1_example.html  class_my_1_1_djinni_library_1_1_example.js  class_my_1_1_djinni_library_1_1_native-members.html  class_my_1_1_djinni_library_1_1_native.html  class_my_1_1_djinni_library_1_1_native.js  classes.html  dir_03133e78d352b872948e6bd7305a26f3.html  dir_03133e78d352b872948e6bd7305a26f3.js  dir_03133e78d352b872948e6bd7305a26f3_dep.map  dir_03133e78d352b872948e6bd7305a26f3_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4a8b0278c7cee3536a3843ff8aeda30e.html  dir_4a8b0278c7cee3536a3843ff8aeda30e.js  dir_4a8b0278c7cee3536a3843ff8aeda30e_dep.map  dir_4a8b0278c7cee3536a3843ff8aeda30e_dep.md5  dir_7d55ba55612b9b78da1c4eaef92b404f.html  dir_7d55ba55612b9b78da1c4eaef92b404f.js  dir_7d55ba55612b9b78da1c4eaef92b404f_dep.map  dir_7d55ba55612b9b78da1c4eaef92b404f_dep.md5  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  dir_b35ffc38a6dca6f18e4d4a64ebec2739.html  dir_b35ffc38a6dca6f18e4d4a64ebec2739.js  dir_b35ffc38a6dca6f18e4d4a64ebec2739_dep.map  dir_b35ffc38a6dca6f18e4d4a64ebec2739_dep.md5  dir_d292ef829fc50e583dab402fbf5deb9d.html  dir_d292ef829fc50e583dab402fbf5deb9d.js  dir_d292ef829fc50e583dab402fbf5deb9d_dep.map  dir_d292ef829fc50e583dab402fbf5deb9d_dep.md5  example_8hpp.html  example_8hpp.js  example_8hpp__incl.map  example_8hpp__incl.md5  example_8hpp_source.html  files.html  functions.html  (+17 more)
cppcli/: _example_8hpp.html  _example_8hpp.js  _example_8hpp__incl.map  _example_8hpp__incl.md5  _example_8hpp_source.html  _native_8hpp.html  _native_8hpp.js  _native_8hpp__dep__incl.map  _native_8hpp__dep__incl.md5  _native_8hpp__incl.map  _native_8hpp__incl.md5  _native_8hpp_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_my_1_1_djinni_library_1_1cppcli_1_1_example-members.html  class_my_1_1_djinni_library_1_1cppcli_1_1_example.html  class_my_1_1_djinni_library_1_1cppcli_1_1_native-members.html  class_my_1_1_djinni_library_1_1cppcli_1_1_native.html  class_my_1_1_djinni_library_1_1cppcli_1_1_native.js  classes.html  custom.css  dir_019cb54a10e52cf0ad510b81da61a60e.html  dir_019cb54a10e52cf0ad510b81da61a60e.js  dir_019cb54a10e52cf0ad510b81da61a60e_dep.map  dir_019cb54a10e52cf0ad510b81da61a60e_dep.md5  dir_11f98049c73a501a4c607802e5f0a6ed.html  dir_11f98049c73a501a4c607802e5f0a6ed.js  dir_11f98049c73a501a4c607802e5f0a6ed_dep.map  dir_11f98049c73a501a4c607802e5f0a6ed_dep.md5  dir_2c3e26c67e8926144e9dab970917e9f6.html  dir_2c3e26c67e8926144e9dab970917e9f6.js  dir_2c3e26c67e8926144e9dab970917e9f6_dep.map  dir_2c3e26c67e8926144e9dab970917e9f6_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  dir_e4bbc5e76652dc47e6cf862075fb7e25.html  dir_e4bbc5e76652dc47e6cf862075fb7e25.js  dir_e4bbc5e76652dc47e6cf862075fb7e25_dep.map  (+23 more)
docs/: development.md  idl.dox
java/: _example_8java.html  _example_8java.js  _my_djinni_library_8java.html  _my_djinni_library_8java.js  _native_8java.html  _native_8java.js  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  classmy_1_1djinnilibrary_1_1_example-members.html  classmy_1_1djinnilibrary_1_1_example.html  classmy_1_1djinnilibrary_1_1_my_djinni_library-members.html  classmy_1_1djinnilibrary_1_1_my_djinni_library.html  classmy_1_1djinnilibrary_1_1_native-members.html  classmy_1_1djinnilibrary_1_1_native.html  classmy_1_1djinnilibrary_1_1_native.js  development_8md.html  dir_037b22c3888d94439fba43d352b02a00.html  dir_037b22c3888d94439fba43d352b02a00.js  dir_037b22c3888d94439fba43d352b02a00_dep.map  dir_037b22c3888d94439fba43d352b02a00_dep.md5  dir_0debf975692b46ff33977c6401d5591e.html  dir_0debf975692b46ff33977c6401d5591e.js  dir_0debf975692b46ff33977c6401d5591e_dep.map  dir_0debf975692b46ff33977c6401d5591e_dep.md5  dir_1fee65f758a710eeb254fd36e25ee6cb.html  dir_1fee65f758a710eeb254fd36e25ee6cb.js  dir_1fee65f758a710eeb254fd36e25ee6cb_dep.map  dir_1fee65f758a710eeb254fd36e25ee6cb_dep.md5  dir_2c3e26c67e8926144e9dab970917e9f6.html  dir_2c3e26c67e8926144e9dab970917e9f6.js  dir_2c3e26c67e8926144e9dab970917e9f6_dep.map  dir_2c3e26c67e8926144e9dab970917e9f6_dep.md5  dir_2c81df27a1c1cf2e31f5d5ff8e56598f.html  dir_2c81df27a1c1cf2e31f5d5ff8e56598f.js  dir_2c81df27a1c1cf2e31f5d5ff8e56598f_dep.map  dir_2c81df27a1c1cf2e31f5d5ff8e56598f_dep.md5  dir_38ab7b7be862a0db1c61aeff97eb42ea.html  dir_38ab7b7be862a0db1c61aeff97eb42ea.js  (+48 more)
lib/: CMakeLists.txt  my_djinni_library.djinni
lib/djinni-generated/: .gitignore
lib/platform/android/: CMakeLists.txt  build.gradle  settings.gradle
lib/platform/android/MyDjinniLibrary/src/main/java/my/djinnilibrary/: MyDjinniLibrary.java
lib/platform/android/djinni-generated/: .gitignore
lib/platform/android/gradle/wrapper/: gradle-wrapper.properties
lib/platform/android/package/: build.gradle  gradle.properties
lib/platform/android/package/MyDjinniLibrary/: build.gradle
lib/platform/android/package/MyDjinniLibrary/src/main/: AndroidManifest.xml
lib/platform/android/package/MyDjinniLibrary/src/main/java/my/djinnilibrary/: MyDjinniLibrary.java
lib/platform/android/package/gradle/wrapper/: gradle-wrapper.properties
lib/platform/darwin/: CMakeLists.txt
lib/platform/darwin/djinni-generated/: .gitignore
lib/platform/darwin/package/: Package.swift
lib/platform/linux/: CMakeLists.txt
lib/platform/windows/: .gitignore  CMakeLists.txt  MyDjinniLibrary.nuspec.template
lib/platform/windows/djinni-generated/: .gitignore
lib/platform/windows/package/: MyDjinniLibrary.nuspec  MyDjinniLibrary.nuspec.template
lib/src/: example.cpp
objc/: _m_d_l_example_8h.html  _m_d_l_example_8h.js  (+81 more)
test/: CMakeLists.txt  exampleTest.cpp
(+65 files in other folders)
